--- a/public/cpf.html
+++ b/public/cpf.html
@@ -1,55 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consulta de Sócios e Dependentes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <div class="container mt-4">
-    <h1>Consulta de Sócios e Dependentes</h1>
-    
-    <!-- Formulário de Consulta -->
-    <form id="cpfForm" class="mb-4">
-      <div class="mb-3">
-        <label for="cpf" class="form-label">CPF</label>
-        <input type="text" class="form-control" id="cpf" placeholder="Digite o CPF" required />
-      </div>
-      <button type="submit" class="btn btn-primary">Consultar</button>
-    </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Consulta de Sócios e Dependentes</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container mt-4">
+      <h1>Consulta de Sócios e Dependentes</h1>
 
-    <!-- Resultado da Consulta -->
-    <div id="resultado"></div>
-  </div>
+      <!-- Formulário de Consulta -->
+      <form id="cpfForm" class="mb-4">
+        <div class="mb-3">
+          <label for="cpf" class="form-label">CPF</label>
+          <input
+            type="text"
+            class="form-control"
+            id="cpf"
+            placeholder="Digite o CPF"
+            required
+            oninput="maskCPF(this)"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Consultar</button>
+      </form>
 
-  <script>
-const baseUrl = `http://${window.location.hostname || 'localhost'}:3000`;
-console.log('Base URL:', baseUrl); // Verifique o valor da baseUrl no console
+      <!-- Resultado da Consulta -->
+      <div id="resultado"></div>
+    </div>
 
-document.getElementById('cpfForm').addEventListener('submit', function(e) {
-  e.preventDefault();
-  const cpf = document.getElementById('cpf').value;
+    <script>
+      const baseUrl = window.location.origin;
 
-  fetch(`${baseUrl}/socio/cpf/${cpf}`) // Usando a URL base dinâmica
-    .then(response => response.json())
-    .then(data => {
-      const resultado = document.getElementById('resultado');
-      resultado.innerHTML = ''; // Limpa o resultado anterior
+      console.log("Base URL:", baseUrl); // Verifique o valor da baseUrl no console
 
-      if (data.status === 'socio') {
-        resultado.innerHTML = `<div class="alert alert-success">CPF pertence a um Sócio: ${data.data.nome}</div>`;
-      } else if (data.status === 'dependente') {
-        resultado.innerHTML = `<div class="alert alert-info">CPF pertence a um Dependente: ${data.data.nome}</div>`;
-      } else {
-        resultado.innerHTML = `<div class="alert alert-warning">CPF não encontrado como Sócio ou Dependente</div>`;
+      document
+        .getElementById("cpfForm")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          const cpf = document.getElementById("cpf").value;
+
+          fetch(`${baseUrl}/socio/cpf/${cpf}`) // Usando a URL base dinâmica
+            .then((response) => response.json())
+            .then((data) => {
+              const resultado = document.getElementById("resultado");
+              resultado.innerHTML = ""; // Limpa o resultado anterior
+
+              if (data.status === "socio") {
+                resultado.innerHTML = `<div class="alert alert-success">CPF pertence a um Sócio: ${data.data.nome}</div>`;
+              } else if (data.status === "dependente") {
+                resultado.innerHTML = `<div class="alert alert-info">CPF pertence a um Dependente: ${data.data.nome}</div>`;
+              } else {
+                resultado.innerHTML = `<div class="alert alert-warning">CPF não encontrado como Sócio ou Dependente</div>`;
+              }
+            })
+            .catch((error) => {
+              console.error("Erro ao consultar o CPF:", error);
+            });
+        });
+
+      function maskCPF(input) {
+          let value = input.value;
+          // Remove tudo que não é número
+          value = value.replace(/\D/g, '');
+          // Coloca a máscara
+          value = value.replace(/(\d{3})(\d)/, '$1.$2');
+          value = value.replace(/(\d{3})(\d)/, '$1.$2');
+          value = value.replace(/(\d{3})(\d{1,2})$/, '$1-$2');
+          input.value = value;
       }
-    })
-    .catch(error => {
-      console.error('Erro ao consultar o CPF:', error);
-    });
-});
-
-</script>
-</body>
+    </script>
+  </body>
 </html>
