--- a/public/carteira.html
+++ b/public/carteira.html
@@ -138,6 +138,11 @@
                 const generatePDF = async () => {
                     try {
                         setIsLoading(true);
+
+                        // Comprimir a imagem antes de enviar
+                        const compressedPhoto =
+                            photo && (await compressImage(photo));
+
                         const response = await fetch("/api/generate-card", {
                             method: "POST",
                             headers: {
@@ -149,7 +154,7 @@
                                 cpf,
                                 issueDate,
                                 validUntil,
-                                photo,
+                                photo: compressedPhoto || null,
                             }),
                         });
 
@@ -174,6 +179,51 @@
                     } finally {
                         setIsLoading(false);
                     }
+                };
+
+                // Adicione esta função de compressão de imagem
+                const compressImage = async (base64String) => {
+                    return new Promise((resolve) => {
+                        const img = new Image();
+                        img.src = base64String;
+                        img.onload = () => {
+                            const canvas = document.createElement("canvas");
+                            const ctx = canvas.getContext("2d");
+
+                            // Define o tamanho máximo
+                            const maxWidth = 400;
+                            const maxHeight = 600;
+
+                            let width = img.width;
+                            let height = img.height;
+
+                            // Redimensiona mantendo a proporção
+                            if (width > height) {
+                                if (width > maxWidth) {
+                                    height *= maxWidth / width;
+                                    width = maxWidth;
+                                }
+                            } else {
+                                if (height > maxHeight) {
+                                    width *= maxHeight / height;
+                                    height = maxHeight;
+                                }
+                            }
+
+                            canvas.width = width;
+                            canvas.height = height;
+
+                            // Desenha a imagem redimensionada
+                            ctx.drawImage(img, 0, 0, width, height);
+
+                            // Converte para JPEG com qualidade reduzida
+                            const compressedBase64 = canvas.toDataURL(
+                                "image/jpeg",
+                                0.7,
+                            );
+                            resolve(compressedBase64);
+                        };
+                    });
                 };
 
                 return (
