--- a/public/carteira.html
+++ b/public/carteira.html
@@ -8,6 +8,41 @@
         <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+            @media screen and (orientation: landscape) {
+                .card-container {
+                    transform: rotate(0deg);
+                }
+            }
+
+            .fullscreen-card {
+                width: 100vw;
+                height: 100vh;
+                background: white;
+                display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 1000;
+            }
+
+            .fullscreen-card.active {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .watermark {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-30deg);
+                font-size: 4rem;
+                color: rgba(0, 0, 0, 0.1);
+                white-space: nowrap;
+                pointer-events: none;
+            }
+        </style>
     </head>
     <body>
         <div id="root"></div>
@@ -134,6 +169,33 @@
                 onBack,
             }) => {
                 const [isLoading, setIsLoading] = React.useState(false);
+                const [isFullscreen, setIsFullscreen] = React.useState(false);
+
+                // Função para entrar em tela cheia
+                const enterFullscreen = () => {
+                    const elem = document.documentElement;
+                    if (elem.requestFullscreen) {
+                        elem.requestFullscreen();
+                    }
+                    setIsFullscreen(true);
+                    // Tenta forçar orientação paisagem
+                    if (screen.orientation) {
+                        screen.orientation.lock("landscape").catch(() => {
+                            console.log("Rotação automática não suportada");
+                        });
+                    }
+                };
+
+                // Função para sair da tela cheia
+                const exitFullscreen = () => {
+                    if (document.exitFullscreen) {
+                        document.exitFullscreen();
+                    }
+                    setIsFullscreen(false);
+                    if (screen.orientation) {
+                        screen.orientation.unlock();
+                    }
+                };
 
                 const generatePDF = async () => {
                     try {
@@ -226,6 +288,144 @@
                     });
                 };
 
+                // Versão paisagem da carteirinha
+                // Dentro do componente MembershipCard, na parte do if(isFullscreen)
+                if (isFullscreen) {
+                    return (
+                        <div className="fixed inset-0 bg-blue-50 flex items-center justify-center">
+                            <div className="relative w-full max-w-5xl h-96 bg-gradient-to-r from-blue-50 to-blue-100 rounded-xl shadow-2xl border-2 border-blue-600 m-4">
+                                <div className="relative z-10 h-full flex flex-col">
+                                    {/* Cabeçalho */}
+                                    <div className="flex items-center p-4 border-b border-blue-200 bg-white/50">
+                                        <div className="flex items-center space-x-4">
+                                            <img
+                                                src="./logo-sintraport.png"
+                                                alt="Logo Sintraport"
+                                                className="h-24 w-auto"
+                                            />
+                                            <div>
+                                                <h1 className="text-2xl font-bold text-blue-800">
+                                                    SINDICATO DOS TRABALHADORES
+                                                    ADMINISTRATIVOS EM CAPATAZIA
+                                                </h1>
+                                                <p className="text-lg text-blue-600">
+                                                    Carteira de Identificação do
+                                                    Sócio
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    {/* Conteúdo Principal */}
+                                    <div className="flex flex-1 p-6">
+                                        {/* Coluna da esquerda - Foto */}
+                                        <div className="w-1/3 flex flex-col items-center border-r border-blue-200">
+                                            <div className="w-40 h-48 rounded-lg overflow-hidden border-2 border-blue-600 mb-4 bg-white">
+                                                {photo && (
+                                                    <img
+                                                        src={photo}
+                                                        alt="Foto do sócio"
+                                                        className="w-full h-full object-cover"
+                                                    />
+                                                )}
+                                            </div>
+                                        </div>
+
+                                        {/* Coluna da direita - Informações */}
+                                        <div className="w-2/3 pl-8">
+                                            <div className="grid grid-cols-2 gap-y-4 gap-x-6 mt-2">
+                                                <div>
+                                                    <p className="text-sm text-blue-600">
+                                                        Nome
+                                                    </p>
+                                                    <p className="font-bold text-lg">
+                                                        {name}
+                                                    </p>
+                                                </div>
+                                                <div>
+                                                    <p className="text-sm text-blue-600">
+                                                        CPF
+                                                    </p>
+                                                    <p className="font-bold text-lg">
+                                                        {cpf}
+                                                    </p>
+                                                </div>
+                                                <div>
+                                                    <p className="text-sm text-blue-600">
+                                                        Data de Emissão
+                                                    </p>
+                                                    <p className="font-bold text-lg">
+                                                        {issueDate}
+                                                    </p>
+                                                </div>
+                                                <div>
+                                                    <p className="text-sm text-blue-600">
+                                                        Válida até
+                                                    </p>
+                                                    <p className="font-bold text-lg">
+                                                        {validUntil}
+                                                    </p>
+                                                </div>
+                                                <div>
+                                                    <p className="text-sm text-blue-600">
+                                                        Matrícula
+                                                    </p>
+                                                    <p className="font-bold text-lg">
+                                                        {memberNumber}
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    {/* Rodapé */}
+                                    <div className="text-center p-2 border-t border-blue-200 bg-white/50">
+                                        <p className="text-sm text-blue-600">
+                                            Este documento é de uso pessoal e
+                                            intransferível
+                                        </p>
+                                    </div>
+                                </div>
+
+                                {/* Botão de sair atualizado */}
+                                <button
+                                    onClick={() => {
+                                        if (
+                                            typeof exitFullscreen === "function"
+                                        ) {
+                                            exitFullscreen();
+                                        }
+                                        if (document.fullscreenElement) {
+                                            document
+                                                .exitFullscreen()
+                                                .catch((err) =>
+                                                    console.log(err),
+                                                );
+                                        }
+                                    }}
+                                    className="absolute top-4 right-4 bg-blue-800 text-white p-2 rounded-full hover:bg-blue-700 transition-colors z-50"
+                                >
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        className="h-6 w-6"
+                                        fill="none"
+                                        viewBox="0 0 24 24"
+                                        stroke="currentColor"
+                                    >
+                                        <path
+                                            strokeLinecap="round"
+                                            strokeLinejoin="round"
+                                            strokeWidth={2}
+                                            d="M6 18L18 6M6 6l12 12"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    );
+                }
+
+                //resto
                 return (
                     <div className="max-w-3xl mx-auto p-4">
                         <div className="bg-white rounded-lg shadow-lg p-6 border-2 border-blue-600 relative overflow-hidden">
@@ -323,6 +523,12 @@
                                 className="px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50"
                             >
                                 Voltar
+                            </button>
+                            <button
+                                onClick={enterFullscreen}
+                                className="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700"
+                            >
+                                Ver em Tela Cheia
                             </button>
                             <button
                                 onClick={generatePDF}
