--- a/public/carteira.html
+++ b/public/carteira.html
@@ -532,12 +532,9 @@
                             </button>
                             <button
                                 onClick={generatePDF}
-                                disabled={isLoading}
-                                className="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 disabled:bg-blue-300"
+                                className="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
                             >
-                                {isLoading
-                                    ? "Gerando PDF..."
-                                    : "Gerar Carteirinha (PDF)"}
+                                Dependentes
                             </button>
                         </div>
                     </div>
